<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.sd.storage.ui.MainActivity">

        <include layout="@layout/toolbar_title" />

        <!--采购入库-->
        <Button
            android:id="@+id/btn_procurement_storage"
            style="@style/Main.Item.Button"
            android:drawableLeft="@mipmap/ic_procurement_storage"
            android:text="@string/procurement_storage" />
        <!--采购退库-->
        <Button
            android:id="@+id/btn_procurement_exit_storage"
            style="@style/Main.Item.Button"
            android:drawableLeft="@mipmap/ic_procurement_exit_storage"
            android:enabled="false"
            android:text="@string/procurement_exit_storage" />
        <!--销售出库-->
        <Button
            android:id="@+id/btn_sell_storage"
            style="@style/Main.Item.Button"
            android:drawableLeft="@mipmap/ic_sell_storage"
            android:text="@string/sell_storage" />
        <!--销售退库-->
        <Button
            android:id="@+id/btn_sell_exit_storage"
            style="@style/Main.Item.Button"
            android:drawableLeft="@mipmap/ic_sell_exit_storage"
            android:enabled="false"
            android:text="@string/sell_exit_storage" />
        <!--调拨单-->
        <Button
            android:id="@+id/btn_transfer_slip"
            style="@style/Main.Item.Button"
            android:drawableLeft="@mipmap/ic_transfer_slip"
            android:enabled="false"
            android:text="@string/transfer_slip" />
        <!--盘点-->
        <Button
            android:id="@+id/btn_check"
            style="@style/Main.Item.Button"
            android:drawableLeft="@mipmap/ic_check"
            android:enabled="false"
            android:text="@string/check" />
        <!--退出-->
        <Button
            android:id="@+id/btn_exit"
            style="@style/Main.Item.Button"
            android:layout_marginTop="@dimen/dimen_60"
            android:text="@string/exit" />
    </LinearLayout>
</ScrollView>