<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_submit_bg"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sure_to_delt"
        android:textColor="@color/c000"
        android:textSize="@dimen/dimen_30" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dimen_3"
        android:layout_marginRight="@dimen/dimen_3"
        android:background="@color/cefefef" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure_str"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/dimen_16" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_3"
            android:background="@color/cefefef" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/detail_do_buy"
            android:textSize="@dimen/dimen_20" />

    </LinearLayout>
</LinearLayout>
