<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cffffff"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/cffffff"
        android:gravity="center"
        android:text="@string/spd"
        android:textColor="@color/c000"
        android:textSize="@dimen/dp_16" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cefefef" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginRight="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dp_80"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@drawable/login_lin_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_5"
                android:src="@mipmap/ic_depar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_05"
                android:layout_marginRight="@dimen/dp_20"
                android:text="@string/department_str"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_16" />


            <TextView
                android:id="@+id/tv_department"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_16" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/login_lin_bg"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_5"
                android:src="@mipmap/ic_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_05"
                android:layout_marginRight="@dimen/dp_20"
                android:text="@string/account_str"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_16" />


            <EditText
                android:id="@+id/et_account"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_account"
                android:singleLine="true"
                android:textColor="@color/c000"
                android:textColorHint="#999999"
                android:textSize="@dimen/dp_16" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/login_lin_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_5"
                android:src="@mipmap/ic_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_05"
                android:layout_marginRight="@dimen/dp_20"
                android:text="@string/password_str"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_16" />


            <EditText
                android:id="@+id/et_password"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/c000"
                android:textColorHint="#999999"
                android:textSize="@dimen/dp_16" />

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/login_tv_bg"
        android:gravity="center"
        android:text="@string/login_str"
        android:textColor="@color/cffffff"
        android:textSize="@dimen/dp_15" />


</LinearLayout>