<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cefefef"
    android:orientation="vertical">

<include layout="@layout/list_head_activity"/>

    <ListView
        android:id="@+id/v_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cffffff"
        android:scrollbars="none"
        android:visibility="gone" />

    <TextView
        android:id="@+id/v_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cffffff"
        android:gravity="center"
        android:text="@string/split_bar_null"
        android:textSize="@dimen/dimen_20" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"

        android:layout_marginTop="@dimen/dimen_1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cffffff"
            android:gravity="center"
            android:text="@string/submit_str"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/dp_15" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cefefef" />

        <TextView
            android:id="@+id/tv_re_scan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cffffff"
            android:gravity="center"
            android:text="@string/re_scan"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/dp_15" />

    </LinearLayout>

</LinearLayout>
