<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cefefef"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_home_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/cffffff"
        android:gravity="center"
        android:textColor="@color/c000"
        android:textSize="@dimen/dp_16" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/cffffff"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lin_put_in"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@mipmap/putin_storage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/put_in_storage"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cefefef" />

        <LinearLayout
            android:id="@+id/lin_barcode_input"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@mipmap/barcode_input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/barcode_input"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cefefef" />

        <LinearLayout
            android:id="@+id/lin_split_bar"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@mipmap/code_spilt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/spilt_bar"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cefefef" />

        <LinearLayout
            android:id="@+id/lin_pan_dian"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@mipmap/pandian" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pandian_str"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:layout_marginTop="@dimen/dimen_1"
        android:background="@color/cefefef"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lin_code_goods"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cffffff"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@mipmap/jianlian" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/code_goods"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>