<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cefefef"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_host"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/cffffff"
        android:gravity="center"
        android:textColor="@color/c000"
        android:textSize="@dimen/dp_16" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80"
        android:layout_marginTop="@dimen/dimen_1"
        android:background="@color/cffffff"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_15"
            android:src="@mipmap/ic_user_head" />


        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_20"
            android:gravity="center"
            android:textColor="@color/c000"
            android:textSize="@dimen/dimen_20" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/cffffff"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_15"
            android:src="@mipmap/ic_user" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center"
            android:text="@string/account_str"
            android:textColor="@color/c000"
            android:textSize="@dimen/dimen_16" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center"
            android:textColor="@color/c000"
            android:textSize="@dimen/dimen_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/cffffff"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_15"
            android:src="@mipmap/ic_depar" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center"
            android:text="@string/belong_department"
            android:textColor="@color/c000"
            android:textSize="@dimen/dimen_16" />

        <TextView
            android:id="@+id/tv_belong_depar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center"
            android:textColor="@color/c000"
            android:textSize="@dimen/dimen_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/cffffff"
        android:orientation="horizontal">



        <ImageView
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_15"
            android:src="@mipmap/login_depart" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center"
            android:text="@string/login_department"
            android:textColor="@color/c000"
            android:textSize="@dimen/dimen_16" />

        <TextView
            android:id="@+id/tv_login_depar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center"
            android:textColor="@color/c000"
            android:textSize="@dimen/dimen_16" />

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/cffffff"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_15"
            android:src="@mipmap/ic_role" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center"
            android:text="@string/role_str"
            android:textColor="@color/c000"
            android:textSize="@dimen/dimen_16" />

        <TextView
            android:id="@+id/tv_role"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center"
            android:textColor="@color/c000"
            android:textSize="@dimen/dimen_16" />

    </LinearLayout>


</LinearLayout>